close #363: fix issue with email validations on Safari

--- a/app/assets/stylesheets/dashboard/shared.scss
+++ b/app/assets/stylesheets/dashboard/shared.scss
@@ -185,6 +185,12 @@ $dashboard-font-family: "Muli", "Open Sans", "Helvetica", Helvetica, Arial, sans
           &:disabled {
             color: #666
           }
+          // Error State
+          &.input-error {
+            background-color: rgba(255,0,0,0.3);
+            border: 1px solid rgba(255,0,0,0.5);
+            height: 96px;
+          }
         }
         input {
           height: 60px;
@@ -229,6 +235,14 @@ $dashboard-font-family: "Muli", "Open Sans", "Helvetica", Helvetica, Arial, sans
           text-transform: uppercase;
           font-size: 10pt;
           cursor: default;
+
+          // Error State
+          &.input-error {
+            position: absolute;
+            top: 72px;
+            text-transform: initial;
+            color: #fff;
+          }
         }
       }
     }
